<resources>

    //App Name
    <string name="app_name">dndcompanion</string>

    //Bottom Navigation Strings
    <string name="title_home">Character</string>
    <string name="title_dice">Dice</string>
    <string name="title_create">Create</string>
    <string name="title_load">Load</string>
    <string name="title_session">Session</string>

    //Placeholder Text for Character Sheet
    <string name="charNameHere">"Name Here"</string>
    <string name="pronounsHere">"Pronouns Here"</string>


    //Default Stat Values
    <string name="basestat">8</string>
    <string name="pointLeft">27</string>

    //Layout Titles for Character/Create Character Views
    <string name="character_basics">Character</string>

    //Character Sheet/Character Creator label Strings
    <string name="character_name">Character Name</string>
    <string name="pronouns">Pronouns e.g. She/Her</string>
    <string name="race">Race</string>
    <string name="character_class">Class</string>

    //Stats Strings
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>

    //String Array for Character Races
    <string-array name="characterRaces">
        <item>Human</item>
        <item>Elf</item>
        <item>Gnome</item>
        <item>Orc</item>
        <item>Dwarf</item>
    </string-array>

    //String Array for Character Classes
    <string-array name="characterClasses">
        <item>Barbarian</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Monk</item>
        <item>Ranger</item>
        <item>Wizard</item>
        <item>Fighter</item>
        <item>Sorcerer</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stats">Stats</string>


    //Toast Messages
    <string name="toastErrorNoPoints">You have no more points left to spend!</string>
    <string name="lowestvalue">Your Stat can\'t have a value lower than 8!</string>
    <string name="advice1">It now Costs two Points to upgrade this Stat!</string>
    <string name="save_button">Save</string>
    <string name="character_created">Character Created!</string>
    <!--<String name="character_loaded">Character Loaded!</String>-->
    <string name="points_remaining_label">Points Remaining:</string>
    <string name="placeholder_text">Placeholder</string>


</resources>
