<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dice"
        android:icon="@drawable/d8"
        android:title="@string/title_dice"/>
    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/add"
        android:title="@string/title_create" />
    <item
        android:id="@+id/navigation_load"
        android:icon="@drawable/folder"
        android:title="@string/title_load" />
    <item
        android:id="@+id/navigation_session"
        android:icon="@drawable/cloud"
        android:title="@string/title_session" />





</menu>
